# golden_dynasty

./: next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/api/contact/: route.ts
app/profile/: page.tsx
app/settings/: page.tsx
backend/: Cargo.toml  errors.txt  errors_utf8.txt  out.txt  schema.sql
backend/src/: main.rs
backend/src/auth/: middleware.rs  mod.rs
backend/src/handlers/: admin.rs  auth.rs  cashier.rs  mod.rs  wallet.rs  webhook.rs
backend/src/models/: mod.rs  transaction.rs  user.rs  wallet.rs
backend/src/routes/: mod.rs
components/: Amenities.tsx  ClubAmbience.tsx  ContactUs.tsx  ExperienceSection.tsx  Footer.tsx  GoldenDynastyHero.tsx  Hero.tsx  LiveFloor.tsx  MapSection.tsx  MediaGallery.tsx  MembershipPerks.tsx  MembershipTiers.tsx  Navbar.tsx  PreLoader.tsx  TournamentCalendar.tsx  TournamentFeed.tsx  TrustFooter.tsx  TrustSection.tsx  WhyUs.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/profile/: page.tsx
frontend/src/lib/: api.ts
