[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.3", features = ["json"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = { version = "0.4.37", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
